--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@
                         <div id="i8zr48@"><input type="radio" id="ibeytc@" name="packageType" value="G" checked/><label id="i6j533">&nbsp;&nbsp;General Subscription -
                                 FREE</label></div>
                         <div id="i4q5jf@"><input type="radio" id="iaywtg@" name="packageType" value="P"/><label id="ifppna">&nbsp;&nbsp;Personalized Subscription
-                                - $4.99 / month (FREE for 1 month)</label></div><br/>
+                                - $4.99 / month</label></div>
+                                <div style="color: rgb(204, 204, 63); display: inline;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(1 Month FREE. No credit card required!)</div><br/><br/>
                         <div id="iwn67f@"><input type="checkbox" id="ik4edg@"/><label id="ifppna">&nbsp;&nbsp;I Accept the <a
                                     href="./termsofservice.html" id="iuqdj3" class="gjs-link">Terms of Service</a> and
                                 <a href="./privacypolicy.html" id="ijbx7g" class="gjs-link">Privacy Policy</a>.</label>
@@ -479,7 +480,7 @@
 
                     <div class="alert alert-danger" style="display:none;">
                         <center>
-                            <strong>Error!</strong> Subscription failed. Please check the inputs and try again.
+                            <strong>Error!</strong> Subscription failed.<br/>Please check the inputs and try again.<br/><br/>If the problem continues, reach us at: info@zodicai.com
                         </center>
                     </div>
                 </div>
