Update contact section

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                         and tech experts, is dedicated to providing you with accurate,
                         AI-enhanced horoscopes to guide you through life's ups and downs. We're
                         here to connect you with the cosmos in a modern, accessible way, helping
-                        you to navigate your journey with the stars as your guide.</div>
+                        you to navigate your journey with the stars as your guide.<br/><br/><p>Reach out at <a href="mailto:info@zodicai.com">info@zodicai.com</a> | Web: <a href="http://www.zodicai.com">www.zodicai.com</a></p></div>
                 </div>
                 <div id="isuoqd" class="gjs-grid-column"><img id="iw3ngq" src="assets/zodicai_logo.png" /></div>
             </div>
