--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div id="iqjl" class="gjs-grid-column"><img id="i87p01" src="assets/zodicai_logo.png" /></div>
                 <div id="iffs" class="gjs-grid-column">
                     <div id="it00l" class="gjs-grid-row">
-                        <div id="irtfd" class="gjs-grid-column"><a id="icfyb" href="#ioyxg" class="gjs-link">Why?</a><a
-                                href="#iqspl2" id="infmy1" class="gjs-link">Packages</a></div>
-                        <div id="icyzp" class="gjs-grid-column"><a id="i88iz" href="#ifzigk"
-                                class="gjs-link">Register</a><a href="#iv3be5" id="i953j1" class="gjs-link">About</a>
+                        <div id="irtfd" class="gjs-grid-column"><a id="icfyb" href="#why" class="gjs-link">Why?</a><a
+                                href="#package" id="infmy1" class="gjs-link">Packages</a></div>
+                        <div id="icyzp" class="gjs-grid-column"><a id="i88iz" href="#subscribe"
+                                class="gjs-link">Register</a><a href="#about" id="i953j1" class="gjs-link">About</a>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
     <div id="irz7b" class="gjs-grid-row">
         <div id="iycz3" class="gjs-grid-column"><img id="i3vvs" src="assets/banner_1.jpg" /></div>
     </div>
-    <div id="ioyxg" class="gjs-grid-row">
+    <div id="why" class="gjs-grid-row">
         <div id="i8w4i" class="gjs-grid-column">
             <h1 id="i292wb" class="gjs-heading">Why  <span id="iwdkcd" class="gjs-text-blue">ZodicAI</span>?<span
                     id="izdkrr" class="gjs-text-blue"><br /></span></h1>
@@ -145,7 +145,7 @@
             </div>
         </div>
     </section>
-    <section id="iqspl2" class="gjs-section">
+    <section id="package" class="gjs-section">
         <div id="i83c5t" class="gjs-container">
             <h1 id="iutdim" class="gjs-heading">Our <span id="ixt91u">Packages</span><br /></h1>
             <div id="iyjnj8" class="gjs-grid-row">
@@ -546,7 +546,7 @@
                 astrological understanding.</div><a id="iwgwt5" href="#subscribe" class="gjs-button">Join Us!</a>
         </div>
     </div>
-    <div id="iv3be5" class="gjs-grid-row">
+    <div id="about" class="gjs-grid-row">
         <div id="ilriti" class="gjs-grid-column">
             <div id="io4rfl" class="gjs-grid-row">
                 <div class="gjs-grid-column">
